# KernelPatch

./: h origin main
kernel/linux/include/linux/: cache.h  int-ll64.h  posix_types.h
kernel/linux/include/uapi/linux/: types.h
kpms/Netfilter/: Makefile  nf.c
kpms/demo-hello/: 1.sh  CMakeLists.txt  Makefile  build.sh
kpms/demo-hello/.cache/clangd/index/: hello.c.BDEE847F975ACCE9.idx
kpms/hook-connect/: Makefile  compile_commands.json  connect.c  hello.h  utils.h
kpms/hook-connect/.cache/clangd/index/: connect.c.5B79A9B23FF1D409.idx  hello.h.BF71CEE123746C99.idx  kernel.h.8FB42DFE0613E684.idx  utils.h.EE84F8613E38FB4B.idx
kpms/hook-tcp-v4/: Makefile  compile_commands.json  hello.h  tcp-v4.c  utils.h  verify.h
kpms/hook-tcp-v4/.cache/clangd/index/: hello.h.552206C6B48C681A.idx  kernel.h.C8E99E5983CA3C44.idx  tcp-v4.c.13CDA0817C8D41D3.idx  utils.h.260395B48FBC4F5C.idx  verify.h.7D392D55B984B877.idx
kpms/verify/: Makefile  utils.h  verify.c  verify.h
kpms/verify/.cache/clangd/index/: hello.h.75D1E1AF03F4F627.idx  utils.h.3BCA18FA282EFCDE.idx  verify.c.26B7326FAEA66F9C.idx  verify.h.E8525AAB20EFDD1D.idx
